--- a/examples/dns_config_info.yml
+++ b/examples/dns_config_info.yml
@@ -11,5 +11,5 @@
       register: dns_config_info_results
 
     - name: Show all DNS config entries
-      debug:
+      ansible.builtin.debug:
         var: dns_config_info_results
