--- a/examples/smtp.yml
+++ b/examples/smtp.yml
@@ -36,5 +36,6 @@
       scale_computing.hypercore.smtp_info:
       register: smtp_info
 
-    - ansible.builtin.debug:
+    - name: Show SMTP configuration
+      ansible.builtin.debug:
         msg: Final SMTP configuration is "{{ smtp_info }}"
