--- a/examples/time_zone_info.yml
+++ b/examples/time_zone_info.yml
@@ -8,5 +8,7 @@
     - name: Get current Time Zone
       scale_computing.hypercore.time_zone_info:
       register: time_zone_info
-    - ansible.builtin.debug:
+
+    - name: Show time zone configuration
+      ansible.builtin.debug:
         msg: "{{ time_zone_info }}"
