--- a/examples/vm_replication_info.yml
+++ b/examples/vm_replication_info.yml
@@ -13,5 +13,5 @@
       register: replication_info_result
 
     - name: Show the replication info status of {{ vm_name }} VM
-      debug:
+      ansible.builtin.debug:
         var: replication_info_result
