--- a/examples/certificate_signing_example.yml
+++ b/examples/certificate_signing_example.yml
@@ -9,7 +9,7 @@
   tasks:
     # More info about openssl_privatekey module
     # (https://docs.ansible.com/ansible/latest/collections/community/crypto/openssl_privatekey_module.html)
-    - name: generate private key with openSSL
+    - name: Generate private key with openSSL
       community.crypto.openssl_privatekey:
         path: private_key_example.pem
 
@@ -36,7 +36,7 @@
         privatekey_path: private_key_example.pem
         provider: selfsigned
 
-    - name: upload generated certificate and private_key with certificate module
+    - name: Upload generated certificate and private_key with certificate module
       scale_computing.hypercore.certificate:
         cluster_instance:
         private_key: "{{ lookup('file', 'private_key_example.pem') }}"
@@ -46,5 +46,5 @@
       check_mode: "{{ hypercore_example_check_mode }}"
 
     - name: Show uploaded certificate info
-      debug:
+      ansible.builtin.debug:
         var: certificate_info
