--- a/examples/version_update_single_node.yml
+++ b/examples/version_update_single_node.yml
@@ -14,8 +14,9 @@
       scale_computing.hypercore.time_zone_info:
       register: time_zone_info
 
-    - ansible.builtin.assert:
-        fail_message: Time zone is not set on the host
+    - name: Check time zone is configured
+      ansible.builtin.assert:
+        fail_msg: Time zone is not set on the host
         that:
           - time_zone_info.record
 
@@ -27,7 +28,7 @@
         time_interval: 22:00-6:00
 
     - name: Update HyperCore single-node system to a desired version
-      include_role:
+      ansible.builtin.include_role:
         name: scale_computing.hypercore.version_update_single_node
       vars:
         scale_computing_hypercore_desired_version: "{{ desired_version }}"
