Remove option select and instead of record add next and latest to return value

--- a/examples/version_update_info.yml
+++ b/examples/version_update_info.yml
@@ -7,8 +7,8 @@
   tasks:
     - name: List available updates
       scale_computing.hypercore.version_update_info:
-      register: version_update_info_result
+      register: result
 
     - name: Show update with count, lowest and highest version
       ansible.builtin.debug:
-        msg: Host has {{ version_update_info_result.records | length }} updates available, lowest is {{ (version_update_info_result.records | first).uuid }}, highest is {{ (version_update_info_result.records | last).uuid }}
+        msg: Host has {{ result.records | length }} updates available, lowest is {{ result.next.uuid }}, highest is {{ result.latest.uuid }}
