--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -14,6 +14,12 @@
 
     force_reboot: true  # allow forced vm shutdown
 
+    # disk size gets rounded by HC3:
+    #   0.1 GB to 107374182 B
+    #   0.2 GB to 214958080 B
+    size_0_1_GB: 107374182
+    size_0_2_GB: 214958080
+
   block:
     - name: Create a stopped VM "{{ vm_2 }}"
       scale_computing.hypercore.vm:
@@ -83,15 +89,26 @@
     - ansible.builtin.assert:
         that:
           - result is changed
+          - result.vm_rebooted is false
     - include_tasks: helper_check_vm_state.yml
       vars:
         vm_name: "{{ vm_2 }}"
         expected_state: stopped
     - ansible.builtin.assert: &test-virtio
         that:
-          - result.record.type == "virtio_disk"
+          - "result.record.keys() | sort == ['disk_slot', 'size', 'type', 'uuid', 'vm_uuid']"
           - result.record.disk_slot == slot_a
+          - result.record.size == size_0_2_GB
+          - result.record.type == "virtio_disk"
+          - result.record.uuid | length == 36
           - result.record.vm_uuid == vm_2_info.records[0].uuid
+          # Test returned record is consistent with data from vm_info
+          - vm_info.records[0].disks | length == 3
+          - vm_info.records[0].disks[2].disk_slot  == slot_a
+          - vm_info.records[0].disks[2].size  == size_0_2_GB
+          - vm_info.records[0].disks[2].type  == "virtio_disk"
+          - vm_info.records[0].disks[2].uuid == result.record.uuid
+          - vm_info.records[0].disks[2].vm_uuid == vm_2_info.records[0].uuid
 
     - name: Start VM "{{ vm_2 }}"
       scale_computing.hypercore.vm_params:
@@ -117,6 +134,7 @@
     - ansible.builtin.assert:
         that:
           - result is not changed
+          - result.vm_rebooted is false
     - include_tasks: helper_check_vm_state.yml
       vars:
         vm_name: "{{ vm_2 }}"
@@ -146,15 +164,30 @@
     - ansible.builtin.assert:
         that:
           - result is changed
+          - result.vm_rebooted is true
     - include_tasks: helper_check_vm_state.yml
       vars:
         vm_name: "{{ vm_2 }}"
         expected_state: started
     - ansible.builtin.assert: &test-not-virtio
         that:
-          - result.record.type == "ide_disk"
+          - "result.record.keys() | sort == ['disk_slot', 'size', 'type', 'uuid', 'vm_uuid']"
           - result.record.disk_slot == slot_b
+          - result.record.size == size_0_2_GB
+          - result.record.type == "ide_disk"
+          - result.record.uuid | length == 36
           - result.record.vm_uuid == vm_2_info.records[0].uuid
+          - vm_info.records[0].disks | length == 4
+          - vm_info.records[0].disks[2].disk_slot  == slot_a
+          - vm_info.records[0].disks[2].size  == size_0_2_GB
+          - vm_info.records[0].disks[2].type  == "virtio_disk"
+          # - vm_info.records[0].disks[2].uuid == result.record.uuid
+          - vm_info.records[0].disks[2].vm_uuid == vm_2_info.records[0].uuid
+          - vm_info.records[0].disks[3].disk_slot  == slot_b
+          - vm_info.records[0].disks[3].size  == size_0_2_GB
+          - vm_info.records[0].disks[3].type  == "ide_disk"
+          - vm_info.records[0].disks[3].uuid == result.record.uuid
+          - vm_info.records[0].disks[3].vm_uuid == vm_2_info.records[0].uuid
 
     - name: >-
         IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}"
@@ -174,6 +207,7 @@
     - ansible.builtin.assert:
         that:
           - result is not changed
+          - result.vm_rebooted is false
     - include_tasks: helper_check_vm_state.yml
       vars:
         vm_name: "{{ vm_2 }}"
@@ -203,15 +237,26 @@
     - ansible.builtin.assert:
         that:
           - result is changed
+          - result.vm_rebooted is true
     - include_tasks: helper_check_vm_state.yml
       vars:
         vm_name: "{{ vm_1 }}"
         expected_state: started
     - ansible.builtin.assert: &test-virtio-2
         that:
-          - result.record.type == "virtio_disk"
+          - "result.record.keys() | sort == ['disk_slot', 'size', 'type', 'uuid', 'vm_uuid']"
           - result.record.disk_slot == slot_vm_1_virtio
+          - result.record.size == size_0_2_GB
+          - result.record.type == "virtio_disk"
+          - result.record.uuid | length == 36
           - result.record.vm_uuid == vm_1_info.records[0].uuid
+          - vm_info.records[0].disks | length == 3
+          - vm_info.records[0].disks[2].disk_slot  == slot_vm_1_virtio
+          - vm_info.records[0].disks[2].size  == size_0_2_GB
+          - vm_info.records[0].disks[2].type  == "virtio_disk"
+          - vm_info.records[0].disks[2].uuid == result.record.uuid
+          - vm_info.records[0].disks[2].vm_uuid == vm_1_info.records[0].uuid
+
 
     - name: >-
         IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}"
@@ -235,6 +280,7 @@
     - ansible.builtin.assert:
         that:
           - result is not changed
+          - result.vm_rebooted is false
     - ansible.builtin.assert: *test-virtio-2
 
 # ---------- Cleanup ------------
