--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -142,56 +142,6 @@ jobs:
           )" >> $GITHUB_OUTPUT
     if: "${{ github.event.inputs || github.event.schedule }}"
 
-  examples-run:
-    needs:
-      - examples-matrix
-      # run examples after integ - they will both try to modify say syslog_server etc
-      # - integ
-    # if: "always() && (needs.examples-matrix.outputs.job_status=='success')"
-    runs-on: [ self-hosted2 ]
-    container: quay.io/justinc1_github/scale_ci_integ:3
-    env:
-      ANSIBLE_COLLECTIONS_PATH: $GITHUB_WORKSPACE/work-dir
-      DEBIAN_FRONTEND: noninteractive
-    defaults:
-      run:
-        working-directory: ${{ env.WORKDIR }}
-    strategy:
-      fail-fast: false
-      matrix:
-        ansible: [ 2.13.0 ]
-        example_name: ${{ fromJson(needs.examples-matrix.outputs.matrix) }}
-    steps:
-      - name: Print examples-run time
-        run: echo $(date + "%T")
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          path: ${{ env.WORKDIR }}
-      - run: pip install ansible-core~=${{ matrix.ansible }}
-      - run: ansible-galaxy collection install community.crypto community.general
-      - run: ansible-galaxy collection list
-
-      # ${{ env.WORKDIR }} cannot be used
-      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
-        with:
-          sc_host: https://10.5.11.201
-          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
-          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
-          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
-          working_directory: ${{ env.WORKDIR }}
-      - run: |
-          pwd
-          ls -al tests/integration/integration_config.yml
-          head tests/integration/integration_config.yml
-
-      - run: |
-          eval export SC_HOST=$(cat tests/integration/integration_config.yml | yq '.sc_host')
-          eval export SC_USERNAME=$(cat tests/integration/integration_config.yml | yq '.sc_config."https://10.5.11.200".sc_username')
-          eval export SC_PASSWORD=$(cat tests/integration/integration_config.yml | yq '.sc_config."https://10.5.11.200".sc_password')
-          eval export SC_TIMEOUT=$(cat tests/integration/integration_config.yml | yq '.sc_timeout')
-          ansible-playbook -i localhost, -e hypercore_example_check_mode=true examples/${{ matrix.example_name }}
-
   integ:
     needs:
       - integ-matrix
@@ -240,12 +190,12 @@ jobs:
           - sc_host: https://10.5.11.201
             test_name: support_tunnel
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: ${{ env.WORKDIR }}
       - name: Print integ time
-        run: echo $(date + "%T") && exit 1
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#        with:
-#          path: ${{ env.WORKDIR }}
+        run: echo "Integ time -> $(date +%T)" && exit 1
 #      - run: pip install ansible-core~=2.13.0
 #      # We have ansible.cfg "for testing" in git repo
 #      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
@@ -261,6 +211,56 @@ jobs:
 #          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
 #          working_directory: ${{ env.WORKDIR }}
 #      - run: ansible-test integration --local ${{ matrix.test_name }}
+
+  examples-run:
+    needs:
+      - examples-matrix
+      # run examples after integ - they will both try to modify say syslog_server etc
+      - integ
+    if: "always() && (needs.examples-matrix.result=='success')"
+    runs-on: [ self-hosted2 ]
+    container: quay.io/justinc1_github/scale_ci_integ:3
+    env:
+      ANSIBLE_COLLECTIONS_PATH: $GITHUB_WORKSPACE/work-dir
+      DEBIAN_FRONTEND: noninteractive
+    defaults:
+      run:
+        working-directory: ${{ env.WORKDIR }}
+    strategy:
+      fail-fast: false
+      matrix:
+        ansible: [ 2.13.0 ]
+        example_name: ${{ fromJson(needs.examples-matrix.outputs.matrix) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: ${{ env.WORKDIR }}
+      - name: Print examples-run time
+        run: echo "Integ time -> $(date +%T)"
+#      - run: pip install ansible-core~=${{ matrix.ansible }}
+#      - run: ansible-galaxy collection install community.crypto community.general
+#      - run: ansible-galaxy collection list
+#
+#      # ${{ env.WORKDIR }} cannot be used
+#      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
+#        with:
+#          sc_host: https://10.5.11.201
+#          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
+#          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
+#          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
+#          working_directory: ${{ env.WORKDIR }}
+#      - run: |
+#          pwd
+#          ls -al tests/integration/integration_config.yml
+#          head tests/integration/integration_config.yml
+#
+#      - run: |
+#          eval export SC_HOST=$(cat tests/integration/integration_config.yml | yq '.sc_host')
+#          eval export SC_USERNAME=$(cat tests/integration/integration_config.yml | yq '.sc_config."https://10.5.11.200".sc_username')
+#          eval export SC_PASSWORD=$(cat tests/integration/integration_config.yml | yq '.sc_config."https://10.5.11.200".sc_password')
+#          eval export SC_TIMEOUT=$(cat tests/integration/integration_config.yml | yq '.sc_timeout')
+#          ansible-playbook -i localhost, -e hypercore_example_check_mode=true examples/${{ matrix.example_name }}
 
   replica_cleanup:
     needs:
